<resources>
    <string name="app_name">Hamba</string>
    <string name="label_login">LogIn</string>
    <string name="label_cadastro">Cadastro</string>
    <string name="label_home">Home</string>
    <string name="label_escolha">Escolha</string>
    <string name="button_entrar">ENTRAR</string>
    <string name="button_criar_conta">CRIAR CONTA</string>
    <string name="text_click_esqueceu_senha">Esqueceu a senha?</string>
    <string name="img_logo">logo</string>
    <string name="edit_text_email">E-mail</string>
    <string name="edit_text_senha">Senha</string>
    <string name="edit_text_nome">Nome</string>
    <string name="text_view_cadastro">CADASTRO</string>
    <string name="text_view_nome">Nome:</string>
    <string name="text_view_email">E-mail:</string>
    <string name="text_view_senha">Senha:</string>
    <string name="edit_text_conf_senha">Confirmar senha</string>
    <string name="dialog_botao_ok">OK</string>
    <string name="dialog_titulo_erro">ERRO</string>
    <string name="title_activity_mainha">MainhaActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_n">HomeNActivity</string>
    <string name="tab_text_1">TUDO</string>
    <string name="tab_text_2">SÉRIES</string>
    <string name="tab_text_3">FILMES</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tela_com_menu">TelaComMenuActivity</string>
    <string name="Search">Pesquisar</string>
    <string name="nav_inicio_text">Inicio</string>
    <string name="nav_meu_hamba_text">Meu Hamba</string>
    <string name="nav_Sair_text">Sair</string>
    <string name="nav_favoritos_text">Favoritos</string>
    <string name="nav_recomendacoes_text">Recomendações</string>
    <string name="nav_configuracoes_text">Configurações</string>
    <string name="nav_noticias_text">Noticias</string>
    <string name="title_activity_com_tabs">ComTabsActivity</string>
    <string name="PrimeiraTaB">TUDO</string>
    <string name="segundaTab">SÉRIES</string>
    <string name="terceiraTab">FILMES</string>
    <string name="label_configuracoes">Configurações</string>
    <string name="button_voltar">Voltar</string>
    <string name="button_modificar">Modificar</string>
    <string name="text_view_email_novo">Digite seu novo e-mail </string>
    <string name="text_view_confirmar_email_novo">Confirme seu novo e-mail </string>
    <string name="text_view_senha_nova">Digite sua senha nova</string>
    <string name="text_view_conf_senha_nova">Confirme sua senha nova</string>
    <string name="edit_text_conf_email_novo">Confirme seu e-mail novo</string>
    <string name="img_text_foto_avatar">Imagem do Avatar</string>
    <string name="title_activity_configuracoes1">configuracoes1Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="button_apagar_conta">Apagar conta</string>
    <string name="action_example">Example action</string>
    <string name="apresentacao">Bem Vindo</string>
    <string name="button_mudar_email">ALTERAR DADOS PESSOAIS</string>
    <string name="button_mudar_senha">ALTERAR SENHA</string>
    <string name="button_apagar_contaA">DESATIVAR CONTA</string>
    <string name="text_view_novo_nome">Novo nome</string>
    <string name="text_view_novo_email">Novo Email</string>
    <string name="text_view_senha_atual">Senha Atual</string>
    <string name="text_view_nova_senha">Nova Senha</string>
    <string name="text_view_confirmar_nova_senha">Confirmar Nova Senha</string>
    <string name="button_desativar_conta">Desativar Conta</string>
    <string name="text_view_confirmar_senha">Confirmar senha</string>
    <string name="desativar_conta">DESATIVAR CONTA</string>
    <string name="transition_key">transition_key</string>
    <string name="texto_lorem" formatted="false">
        Lorem %s ipsum dolor sit amet, mauris sollicitudin nostrud, ut nec, imperdiet eu sit in varius fringilla amet, congue fames id consectetuer vel. Vestibulum quis nunc nec in, sodales at integer. Ut porta nulla. Quis ultrices neque velit tortor, ipsum eros cras nam, est sodales quis pede, quisque vestibulum elit sit blandit eleifend. Elit urna feugiat, fermentum sem euismod vestibulum. Vestibulum nulla sed, nibh sed a in tristique lorem, diam pretium adipisci, in porttitor nulla nec, adipiscing arcu ligula a nulla mi. Quam vestibulum vel eu ante nec vel, enim ipsum sem scelerisque. Litora tincidunt dapibus varius vestibulum ullamcorper egestas. Hendrerit suspendisse consequat fames neque, diam egestas nam sed dui lacus sem. Morbi ligula nullam donec at. Nam vestibulum sed ullam sem habitasse sem, mollitia neque, id convallis aliquam tempor vel.
\n\nElit %s wisi odio rhoncus luctus turpis, lacinia sed vel sed interdum donec, ornare tempus quam tellus aliquam bibendum vestibulum. Nulla mauris. Blandit vestibulum, consectetuer massa nulla congue diam, consectetuer justo volutpat, amet neque morbi nibh nunc nec. Sed suspendisse vestibulum donec, mauris ut egestas. Pede ducimus id in gravida tellus, tempor sociosqu ac accumsan, id non odio dapibus tempor tempor, mi mi. Justo turpis sit. Pulvinar fringilla ut, et ligula rhoncus semper vivamus elit sit, diam mauris diam dignissim ut sodales.
\n\nPharetra %s mi sed vivamus, libero id libero vitae turpis in aenean, semper dui, euismod nonummy arcu integer odio, ipsum a. Sollicitudin nec mauris odio amet dolor amet, cras facilisis fuga cras facilisis, quis nulla dui ut suspendisse venenatis, rhoncus placerat sed in etiam, mi libero nullam scelerisque. Lacus reprehenderit velit, platea scelerisque libero, scelerisque feugiat gravida ridiculus faucibus sagittis, sed vel. Wisi dolor, convallis elit lectus nunc volutpat duis, tortor libero, proin in phasellus. Erat velit in ullamcorper massa. Nemo massa vestibulum est neque amet eros, netus congue faucibus. Pulvinar nibh aptent leo id eleifend, semper ac. Wisi integer commodo, commodo non duis leo.
\n\nMagna %s convallis vestibulum velit eu vel, sed egestas scelerisque. Vestibulum viverra libero sed, aliquid bibendum platea diam sem id, id erat ligula, lacus hac wisi elit dolor, condimentum dui dui justo volutpat. Pede pede id vehicula facilisi blandit, urna luctus pharetra suscipit ut in erat, eu feugiat, maecenas sed adipiscing suscipit ante. Nunc orci mollis posuere sem integer. Urna quam nonummy velit, cras dignissim vestibulum nec feugiat. Montes consectetuer id felis et, rhoncus malesuada malesuada iaculis parturient, mauris quam odio libero tellus sed eleifend, a cras, et lorem magna sapien est pellentesque. Eget molestie wisi taciti litora luctus aenean, sed donec wisi, in iaculis

    </string>
    <string name="texto_lorem_1" formatted="false">
        Lorem %s ipsum dolor sit amet, mauris sollicitudin nostrud, ut nec, imperdiet eu sit in varius fringilla amet, congue fames id consectetuer vel. Vestibulum quis nunc nec in, sodales at integer. Ut porta nulla. Quis ultrices neque velit tortor, ipsum eros cras nam, est sodales quis pede, quisque vestibulum elit sit blandit eleifend. Elit urna feugiat, fermentum sem euismod vestibulum. Vestibulum nulla sed, nibh sed a in tristique lorem, diam pretium adipisci, in porttitor nulla nec, adipiscing arcu ligula a nulla mi. Quam vestibulum vel eu ante nec vel, enim ipsum sem scelerisque. Litora tincidunt dapibus varius vestibulum ullamcorper egestas. Hendrerit suspendisse consequat fames neque, diam egestas nam sed dui lacus sem. Morbi ligula nullam donec at. Nam vestibulum sed ullam sem habitasse sem, mollitia neque, id convallis aliquam tempor vel.
    </string>
    <string name="texto_lorem_2" formatted="false">
\n\nElit %s wisi odio rhoncus luctus turpis, lacinia sed vel sed interdum donec, ornare tempus quam tellus aliquam bibendum vestibulum. Nulla mauris. Blandit vestibulum, consectetuer massa nulla congue diam, consectetuer justo volutpat, amet neque morbi nibh nunc nec. Sed suspendisse vestibulum donec, mauris ut egestas. Pede ducimus id in gravida tellus, tempor sociosqu ac accumsan, id non odio dapibus tempor tempor, mi mi. Justo turpis sit. Pulvinar fringilla ut, et ligula rhoncus semper vivamus elit sit, diam mauris diam dignissim ut sodales.
    </string>
    <string name="texto_lorem_3" formatted="false">
\n\nPharetra %s mi sed vivamus, libero id libero vitae turpis in aenean, semper dui, euismod nonummy arcu integer odio, ipsum a. Sollicitudin nec mauris odio amet dolor amet, cras facilisis fuga cras facilisis, quis nulla dui ut suspendisse venenatis, rhoncus placerat sed in etiam, mi libero nullam scelerisque. Lacus reprehenderit velit, platea scelerisque libero, scelerisque feugiat gravida ridiculus faucibus sagittis, sed vel. Wisi dolor, convallis elit lectus nunc volutpat duis, tortor libero, proin in phasellus. Erat velit in ullamcorper massa. Nemo massa vestibulum est neque amet eros, netus congue faucibus. Pulvinar nibh aptent leo id eleifend, semper ac. Wisi integer commodo, commodo non duis leo.
    </string>
    <string name="texto_lorem_4" formatted="false">
\n\nMagna %s convallis vestibulum velit eu vel, sed egestas scelerisque. Vestibulum viverra libero sed, aliquid bibendum platea diam sem id, id erat ligula, lacus hac wisi elit dolor, condimentum dui dui justo volutpat. Pede pede id vehicula facilisi blandit, urna luctus pharetra suscipit ut in erat, eu feugiat, maecenas sed adipiscing suscipit ante. Nunc orci mollis posuere sem integer. Urna quam nonummy velit, cras dignissim vestibulum nec feugiat. Montes consectetuer id felis et, rhoncus malesuada malesuada iaculis parturient, mauris quam odio libero tellus sed eleifend, a cras, et lorem magna sapien est pellentesque. Eget molestie wisi taciti litora luctus aenean, sed donec wisi, in iaculis
    </string>
    <string name="texto_lorem_5" formatted="false">
\n\nVestibulum quis dolor maximus, convallis odio rutrum, tempus metus. Praesent fermentum volutpat est, eu fermentum urna maximus eget. Nam eget metus semper, hendrerit ligula vitae, aliquam nunc. Integer pulvinar, ex in dictum venenatis, ex augue commodo libero, sit amet tincidunt justo massa sit amet est. Etiam nibh mauris, gravida ut massa vel, elementum tincidunt nunc. Aliquam erat volutpat. Suspendisse lorem neque, dapibus a mi id, congue dictum odio. Ut vel vulputate augue. In venenatis laoreet lacinia. Donec malesuada nunc tellus, non hendrerit sem pellentesque vitae.
    </string>
    <string name="label_escolha_configuracao">Configuração</string>
    <string name="text_action_share">Compartilhar</string>
    <string name="text_action_adicionar_meu_hamba">Adicionar ao "Meu hamba"</string>
    <string name="text_action_adicionar_meus_fav">Adicionar aos "Favoritos"</string>
    <string name="text_action_grid">Visualizar em grade</string>
    <string name="text_action_linear">Visualizar em lista</string>
    <string name="text_action_excluir_meu_hamba">Remover do \"Meu Hamba\"</string>
    <string name="text_action_excluir_meus_fav">Remover dos Favoritos</string>
    <string name="label_marcar_episodio_assistido">Marcar episódios assistidos</string>
    <string name="text_atualizar_ep_assistidos">Atualizar episódios assistidos</string>
    <string name="text_check_marcar_todos_ep">Marcar todos os episódios</string>
</resources>