<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_adicionar_meu_hamba"
        android:title="@string/text_action_adicionar_meu_hamba"
        app:showAsAction="never"
        android:visible="true"/>
    <item
        android:id="@+id/action_adicionar_meus_fav"
        android:title="@string/text_action_adicionar_meus_fav"
        app:showAsAction="never"
        android:visible="true"/>

    <item
        android:id="@+id/action_share"
        android:title="@string/text_action_share"
        app:showAsAction="never"
        android:visible="true"/>
    <item
        android:id="@+id/action_remove_meu_hamba"
        android:title="@string/text_action_excluir_meu_hamba"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove_fav"
        android:title="@string/text_action_excluir_meus_fav"
        android:visible="true"
        app:showAsAction="never" />

</menu>
