<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24dp"
        android:orderInCategory="200"
        android:title="@string/Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_linear"
        android:icon="@drawable/ic_view_list_24dp"
        android:orderInCategory="200"
        android:title="@string/text_action_linear"
        android:visible="true"
        app:showAsAction="always|never" />
    <item
        android:id="@+id/action_grid"
        android:icon="@drawable/ic_view_module_24dp"
        android:orderInCategory="200"
        android:title="@string/text_action_grid"
        android:visible="false"
        app:showAsAction="always" />

</menu>
