<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuario.gui.ConfiguracoesActivity"
    android:orientation="vertical"
    android:background="@color/colorFundo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/materialup.appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/materialup.toolbar"
                    style="@style/ToolBarWithNavigationBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    app:layout_scrollFlags="scroll|enterAlways|snap"
                    app:theme="@style/ThemeOverlay.AppCompat.Light"
                    app:title="@string/label_configuracoes"
                    app:titleTextColor="@color/colorFundo" />
            </android.support.design.widget.AppBarLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_account_circle_24dp"
                android:contentDescription="@string/img_text_foto_avatar" />

            <TextView
                android:id="@+id/textoEmail"
                android:layout_width="379dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/text_view_email_novo"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/edtEmailNovo"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:hint="@string/edit_text_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textoConfEmail"
                android:layout_width="379dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/edit_text_conf_email_novo"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/edtConfEmail"
                android:layout_width="294dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:hint="@string/edit_text_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textoNome"
                android:layout_width="379dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/text_view_senha_nova"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="visible" />
            <EditText
                android:id="@+id/edtSenhaNova"
                android:layout_width="294dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:hint="@string/edit_text_senha"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textoConfSenha"
                android:layout_width="379dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/text_view_conf_senha_nova"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="visible" />
            <EditText
                android:id="@+id/edtSenhaConf"
                android:layout_width="294dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:hint="@string/edit_text_senha"
                android:inputType="textPassword" />


            <LinearLayout
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnModificar"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@color/colorButoes"
                    android:onClick="onClickModificar"
                    android:text="@string/button_modificar"
                    android:textColor="@color/colorTextoBut"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnApagarConta"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@color/colorButoes"
                    android:onClick="retornoMenuPrincipal"
                    android:text="@string/button_apagar_conta"
                    android:textColor="@color/colorTextoBut"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>