<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuario.gui.EscolhaConfiguracaoActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/materialup.appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/materialup.toolbar"
            style="@style/ToolBarWithNavigationBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:theme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/label_escolha_configuracao"
            app:titleTextColor="@color/colorFundo" />
    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/button_entrar4"
        android:layout_width="336dp"
        android:layout_height="62dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorButoes"
        android:onClick="cliqueBotaoDestivarConta"
        android:text="@string/button_apagar_contaA"
        android:textColor="@color/colorTextoBut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_AlterarDados" />

    <Button
        android:id="@+id/button_AlterarDados"
        android:layout_width="336dp"
        android:layout_height="62dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorButoes"
        android:onClick="cliqueBotaoAlterarDados"
        android:text="@string/button_mudar_email"
        android:textColor="@color/colorTextoBut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_entrar2" />

    <Button
        android:id="@+id/button_entrar2"
        android:layout_width="336dp"
        android:layout_height="62dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:background="@color/colorButoes"
        android:onClick="cliqueBotaoAlterarSenha"
        android:text="@string/button_mudar_senha"
        android:textColor="@color/colorTextoBut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialup.appbar" />


</android.support.constraint.ConstraintLayout>