<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activity_consultas_pendentes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorFundo"
    tools:context=".infra.EpisodiosListCheckActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/materialup.appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/materialup.toolbar"
            style="@style/ToolBarWithNavigationBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:theme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/label_marcar_episodio_assistido"
            app:titleTextColor="@color/colorFundo" />


    </android.support.design.widget.AppBarLayout>

    <CheckBox
        android:id="@+id/checkBoxMarcarTodosEpisodios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_check_marcar_todos_ep"
        android:layout_margin="16dp"
        android:textSize="18sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="70dp"
            android:layout_above="@+id/button_atualizar_episodios_assistidos">
        </ListView>

        <Button
            android:id="@+id/button_atualizar_episodios_assistidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorButoes"
            android:text="@string/text_atualizar_ep_assistidos"
            android:textColor="@color/colorTextoBut"
            android:layout_alignParentBottom="true"/>

     </RelativeLayout>




</LinearLayout>