<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuario.gui.CadastroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorFundo"
                tools:context=".usuario.gui.CadastroActivity">

                    <TextView
                        android:id="@+id/textViewCadastro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/text_view_cadastro"
                        android:textSize="36sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editTextNome"
                        android:layout_width="310dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:ems="10"
                        android:hint="@string/edit_text_nome"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewCadastro" />

                    <EditText
                        android:id="@+id/editTextSenhaCad"
                        android:layout_width="310dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:ems="10"
                        android:hint="@string/edit_text_senha"
                        android:inputType="textPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="310dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:ems="10"
                        android:hint="@string/edit_text_email"
                        android:inputType="textEmailAddress"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

                    <EditText
                        android:id="@+id/editTextConfSenha"
                        android:layout_width="310dp"
                        android:layout_height="41dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:ems="10"
                        android:hint="@string/edit_text_conf_senha"
                        android:inputType="textPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextSenhaCad" />

                    <Button
                        android:id="@+id/button_criar_conta2"
                        android:layout_width="310dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"


                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:background="@color/colorButoes"
                        android:text="@string/button_criar_conta"
                        android:textColor="@color/colorTextoBut"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextConfSenha" />
            </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>